--- a/css/basis.css
+++ b/css/basis.css
@@ -252,11 +252,37 @@ div.hamburg span {
 }
 /*humberger*/
 
+/* goTop */
+#goTop{
+    width: 80px;
+    height: 80px;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    border-radius: 15px;
+    border: 1px solid #fafafa;
+    background-color: rgba(33, 33, 33, .8);
+    color: #fafafa;
+    font-size: 26px;
+    text-align: center;
+    line-height: 80px;
+    cursor: pointer;
+}
+
 
 @media screen and (max-width: 1439px) and (min-width: 1200px){    
     nav{
         max-width: 1000px;
     }
+    #goTop{
+        width: 70px;
+        height: 50px;
+        right: 20px;
+        bottom: 20px;
+        font-size: 20px;
+        line-height: 50px;
+    }
+
 }
 @media screen and (max-width: 1199px) and (min-width: 992px){
     header a img{
@@ -265,6 +291,14 @@ div.hamburg span {
     nav{
         max-width: 960px;
     }
+    #goTop{
+        width: 70px;
+        height: 50px;
+        right: 20px;
+        bottom: 20px;
+        font-size: 20px;
+        line-height: 50px;
+    }
 }
 @media screen and (max-width: 991px){
     header a img{
@@ -272,6 +306,15 @@ div.hamburg span {
     }
     nav{
         max-width: 650px;
+    }
+
+    #goTop{
+        width: 70px;
+        height: 50px;
+        right: 20px;
+        bottom: 20px;
+        font-size: 20px;
+        line-height: 50px;
     }
 }
 @media screen  and (max-width: 767px){
@@ -312,10 +355,14 @@ div.hamburg span {
         margin: 50px 0px 50px 30px;
     }
     
+    
 }
 @media all and (max-width: 575px){
     p{
         font-size: 18px;
         line-height: 1.4;
+    }
+    #goTop{
+        display: none;
     }
 }
