--- a/css/consultant.css
+++ b/css/consultant.css
@@ -45,7 +45,7 @@
     height: 238px;
     position: absolute;
     right: 400px;
-    top: 450px;
+    top: 350px;
     opacity: 0;
 
 }
@@ -108,7 +108,7 @@ button{
     flex-direction: column;
     align-items: center;
     position: absolute;
-    top: 300px;
+    /* top: 300px; */
     /* left: 500px; */
     z-index: 20;
 
@@ -117,66 +117,53 @@ button{
     animation-iteration-count: infinite;
 }
 .square{
-    width: 100px;
-    height: 200px;
+    width: 80px;
+    height: 170px;
     background-color: rgba(33, 33, 33, .9);
     color: #fafafa;
 
     text-align: center;
-    line-height: 100px;
+    line-height: 80px;
     font-size: 24px;
     writing-mode: vertical-lr;
-
-    /* position: absolute;
-    left: 0;
-    top: 0; */
 }
 .triangle{
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 100px 100px 0 100px;
+    border-width: 80px 80px 0 80px;
     border-color: rgba(33, 33, 33, .9) transparent transparent transparent;
-
-    /* position: absolute;
-    left: 0;
-    top: 0; */
 }
 
 @media all and (max-width: 1339px) and (min-width: 992px){
     
-    .wrap div:nth-child(1){
+    .wrap>div:nth-child(2){
         width: 454px;
         height: 148px;
-        position: absolute;
         top: 100px;
         left: 250px;
     }
-    .wrap div:nth-child(2){
+    .wrap div:nth-child(3){
         width: 524px;
         height: 238px;
-        position: absolute;
         right: 180px;
         top: 350px; 
     }
-    .wrap div:nth-child(3){
+    .wrap div:nth-child(4){
         width: 380px;
         height: 200px;
-        position: absolute;
         right: 200px;
         top: 100px;
     }
-    .wrap div:nth-child(4){
+    .wrap div:nth-child(5){
         width: 400px;
         height: 180px;
-        position: absolute;
         left: 25%;
         bottom: 40%;
     }
-    .wrap div:nth-child(5){
+    .wrap div:nth-child(6){
         width: 310px;
         height: 250px;
-        position: absolute;
         right: 50%;
         bottom: 50%;
         transform: translate(50%, 15%);
@@ -197,38 +184,33 @@ button{
         background-position: center 53%;
 
     }
-    .wrap div:nth-child(1){
+    .wrap>div:nth-child(2){
         width: 454px;
         height: 148px;
-        position: absolute;
         top: 100px;
         left: 250px;
     }
-    .wrap div:nth-child(2){
+    .wrap div:nth-child(3){
         width: 524px;
         height: 238px;
-        position: absolute;
         right: 180px;
         top: 300px;
     }
-    .wrap div:nth-child(3){
+    .wrap div:nth-child(4){
         width: 380px;
         height: 200px;
-        position: absolute;
         right: 220px;
         top: 100px;
     }
-    .wrap div:nth-child(4){
+    .wrap div:nth-child(5){
         width: 400px;
         height: 180px;
-        position: absolute;
         left: 25%;
         bottom: 40%;
     }
-    .wrap div:nth-child(5){
+    .wrap div:nth-child(6){
         width: 310px;
         height: 250px;
-        position: absolute;
         right: 50%;
         bottom: 50%;
         transform: translate(50%, 15%);
@@ -237,14 +219,13 @@ button{
         width: 170px;
         height: 50px;
         background-color: rgba(0, 0, 0, .7);
-        position: absolute;
         right: 50%;
         bottom: 50%;
         transform: translate(50%, 200%);
     }
 }
 
-@media all and (max-width: 767px) and (min-width: 400px){
+@media all and (max-width: 767px) and (min-width: 420px){
     .background{
         background-position: center 53%;
     }
@@ -253,39 +234,48 @@ button{
         text-align: center;
         font-weight: bold;
         font-size: 18px;
-    }
-    .wrap div:nth-child(1){
-        width: 360px;
+    }    
+
+    .square{
+        width: 60px;
         height: 120px;
-        position: absolute;
-        top: 100px;
-        left: 120px;
+        
+        line-height: 60px;
+        font-size: 18px;
+        writing-mode: vertical-lr;
     }
-    .wrap div:nth-child(2){
-        width: 400px;
-        height: 150px;
-        position: absolute;
-        right: 50px;
-        top: 300px;
+    .triangle{        
+        border-width: 60px 60px 0 60px;        
+    }
+
+    .wrap>div:nth-child(2){
+        width: 315px;
+        height: 100px;
+        top: 100px;
+        left: 90px;
     }
     .wrap div:nth-child(3){
-        width: 300px;
-        height: 130px;
-        position: absolute;
-        right: 150px;
-        top: 120px;
+        width: 350px;
+        height: 150px;
+        right: 40px;
+        top: 300px;
+
     }
     .wrap div:nth-child(4){
         width: 300px;
         height: 130px;
-        position: absolute;
+        right: 150px;
+        top: 120px;
+    }
+    .wrap div:nth-child(5){
+        width: 300px;
+        height: 130px;
         left: 20%;
         bottom: 40%;
     }
-    .wrap div:nth-child(5){
+    .wrap div:nth-child(6){
         width: 200px;
         height: 200px;
-        position: absolute;
         right: 50%;
         bottom: 50%;
         transform: translate(50%, 15%);
@@ -294,7 +284,6 @@ button{
         width: 150px;
         height: 45px;
         background-color: rgba(0, 0, 0, .7);
-        position: absolute;
         right: 50%;
         bottom: 50%;
         transform: translate(50%, 200%);
@@ -302,9 +291,20 @@ button{
     }
 }
 
-@media all and (max-width: 400px){
+@media all and (max-width: 420px){
     .background{
         background-position: 49.5% 53%;
+    }
+    .square{
+        width: 60px;
+        height: 120px;
+        
+        line-height: 60px;
+        font-size: 18px;
+        writing-mode: vertical-lr;
+    }
+    .triangle{        
+        border-width: 60px 60px 0 60px;        
     }
     .wrap p{
         line-height: 1.4;
@@ -312,50 +312,64 @@ button{
         font-weight: bold;
         font-size: 14px;
     }
-    .wrap div:nth-child(1){
+    /* .wrap>div:nth-child(3) p{
+        text-align: left;
+    } */
+    .wrap>div:nth-child(2){
         width: 280px;
         height: 90px;
-        position: absolute;
         top: 250px;
-        left: 20px;
-    }
-    .wrap div:nth-child(2){
-        width: 280px;
-        height: 140px;
-        position: absolute;
-        left: 20px;
-        top: 200px;
+        left: 50%;
+        /* left: 20px; */
+
+        transform: translateX(-50%);
     }
     .wrap div:nth-child(3){
         width: 280px;
-        height: 100px;
-        position: absolute;
-        left: 20px;
-        top: 190px;    
+        height: 140px;
+        /* left: 20px; */
+        left: 50%;
+        top: 200px;
+
+        transform: translateX(-50%);
+
     }
     .wrap div:nth-child(4){
         width: 280px;
         height: 100px;
-        position: absolute;
-        left: 20px;
-        top: 170px;
+        /* left: 20px; */
+        left: 50%;
+        top: 190px;  
+        
+        transform: translateX(-50%);
+        
     }
     .wrap div:nth-child(5){
+        width: 280px;
+        height: 100px;
+        /* left: 20px; */
+        left: 50%;
+        top: 170px;
+
+        transform: translateX(-50%);
+
+    }
+    .wrap div:nth-child(6){
         width: 200px;
         height: 150px;
-        position: absolute;
-        left: 70px;
-        top: 130px;
-        transform: translate(0, 0);
+        /* left: 70px; */
+        left: 50%;
+        top: 150px;
+        transform: translate(-50%, 0);
     }
     button{
         width: 150px;
         height: 45px;
         background-color: rgba(0, 0, 0, .7);
-        position: absolute;
-        left: 20px;
+        left: 50%;
+        /* left: 20px; */
         top: 45%;
-        transform: translate(50%, 200%);
+        transform: translate(-50%, 200%);
         font-size: 20px;
     }
 
